--- a/index.html
+++ b/index.html
@@ -72,7 +72,7 @@
                 </div>
             </div>
         </div>
-        <div class="infor">dscsd</div>
+        <div id="infor" class="infor">dscsd</div>
     </section>
     <script src="./script.js"></script>
 </body>
