--- a/index.html
+++ b/index.html
@@ -5,8 +5,9 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Music for love</title>
-    <!-- <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.4.1/jquery.min.js"></script> -->
-    <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.3.1/css/all.css">
+    <script src="./lib/jquery.js"></script>
+
+    <link rel="stylesheet" href="./lib/css/all.css">
     <link rel="stylesheet" href="./style.css">
     <link rel="icon shortcut" href="./icon.png">
 </head>
